--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
     </nav>
 
-    <div class="hello-ji">HELLO JI</div>
+    <div class="hello-ji">HELLO, body section goes here.</div>
 
     <footer>
       <div class="go-to-container">
