--- a/accueil.html
+++ b/accueil.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
-    <title>Document</title>
+    <title>Accueil</title>
   </head>
   <body>
     <div class="accueil-container">
       <div class="accueil-content">
         <div class="categories-container">
-          <a href="#" class="category">ÉQUIPE</a>
-          <a href="#" class="category">CALENDRIER</a
-          ><a href="#" class="category">CONTACT</a>
+          <a href="./equipe.html" class="category">ÉQUIPE</a>
+          <a href="./calendrier.html" class="category">CALENDRIER</a
+          ><a href="./contact-us.html" class="category">CONTACT</a>
         </div>
         <div class="logo-content-container">
-          <img src="./images/accueil.svg" alt="accueil" />
+          <a href="./accueil.html">
+            <img src="./images/accueil.svg" alt="accueil" />
+          </a>
           <p>FC ATTAENS</p>
         </div>
       </div>
