--- a/contact-us.html
+++ b/contact-us.html
@@ -48,7 +48,15 @@
         <button>ENVOYER</button>
       </div>
       <div class="empty-box">
-        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2745.938922620403!2d6.844821075638973!3d46.50931937111026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478e8354f5d1c085%3A0x17cf0e311ace2da5!2sFC%20Attalens!5e0!3m2!1sen!2s!4v1697225021951!5m2!1sen!2s"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
       </div>
     </form>
     <footer>
