--- a/equipe.html
+++ b/equipe.html
@@ -36,7 +36,8 @@
       </div>
     </nav>
     <div class="hero">
-      <img src="./images/hero-mobile.svg" alt="" />
+      <img class="hero-mobile" src="./images/hero-mobile.svg" alt="" />
+      <img class="hero-desktop" src="./images/hero-image-desktop.png" alt="" />
     </div>
 
     <div class="tabset">
@@ -60,7 +61,8 @@
       <div class="tab-panels">
         <section id="joueurs" class="tab-panel">
           <!-- <h2>6A. Märzen</h2> -->
-          <img src="./images/artboard-mobile.png" />
+          <img class="artboard-mobile" src="./images/artboard-mobile.png" />
+          <img class="artboard-desktop" src="./images/artboard-desktop.png" />
         </section>
         <section id="historiques" class="tab-panel">
           <!-- <h2>6B. Rauchbier</h2> -->
